--- a/styles/global2.css
+++ b/styles/global2.css
@@ -330,6 +330,14 @@ li {
 	.med-pic {
 		width: 50%;
 	}
+
+	#arrow-up {
+		height: 30px;
+		width: 30px;
+		padding: 15px;
+		margin-bottom: 10px;
+		margin-right: 10px;
+	}
 }
 
 @media only screen and (max-width: 800px) {
