--- a/styles/home.css
+++ b/styles/home.css
@@ -1,25 +1,21 @@
 body {
 	margin: 0 !important;
     font-family: "Avenir";
-    font-weight: 200;  
+    font-weight: 200;
 }
 
 #home {
 	z-index: 4; 
     height: 100vh;
+    width: 100vw;
     background-color: #0099ff;
     position: relative; 
 }
 
 #home-text {
-    width: 60%;
+    padding: 5%;
 	z-index: 1;
 	position: relative;
-    margin: auto;
-    float: left;
-    top: 50%;
-    left: 55%;
-    transform: translate(-50%, -55%);
 }
 
 #home-text a {
@@ -29,27 +25,29 @@ body {
 }
 
 #home-text-title {
-    font-family: "Tokyo";
+    font-family: "Tokyo-Outline";
 	position: relative;
     color: white;
-    font-weight: 500;
-    letter-spacing: 15px;
-	font-size: 80px;
-	z-index: 1;
+	font-size: 100px;
     line-height: 80px;
+	z-index: 1;
 }
 
 #home-text-description {
     width: 90%;
     margin-top: 5%;
     margin-bottom: 5%;
-    font-weight: 180;
-	font-size: 16px;
-    text-align: left;
+}
+
+.intro {
+    font-size: 18px;
+    width: 65%;
+    color: #001c2e;
 }
 
 #my-location {
     font-size: 24px;
+    color: #001c2e;
 }
 
 .padding-large {
@@ -97,8 +95,18 @@ body {
 
 @media only screen and (max-width: 900px) {
 
+    #home {
+        width: 125vw;
+        height: 125vh;
+    }
+
     #home-text {
         width: 80%;
+        padding-top: 40%;
+    }
+
+    .overlay {
+        display: none;
     }
 
 }
@@ -107,26 +115,31 @@ body {
 
 @media only screen and (max-width: 500px) {
     #home {
-        width: 110%;
-        height: 110vh;
+        text-align: center;
     }
 
     #my-location {
         margin-bottom: 0%;
-        margin-top: 3%;
     }
 
     #home-text-title {
-        font-size: 65px;
-        line-height: 60px;
+        font-size: 80px;
+        line-height: 70px;
+    }
+
+    #home-text-description {
+        margin-top: 6%;
+        width: 100%;
+    }
+
+    .intro {
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 
     #home-text-description p {
         margin-top: 3%;
-    }
-
-    #home-text {
-    	width: 80% !important;
     }
 
     #arrow-down {
