--- a/styles/global2.css
+++ b/styles/global2.css
@@ -386,12 +386,9 @@ li {
 
 /* Next button */
 .next-project {
+
 	width: 30%;
-	height: 20px;
-	text-align: center;
-	padding: 5px;
-	padding-top: 24px;
-	padding-bottom: 24px;
+	height: 50px;
 	color: white;
 	font-weight: 600;
 	letter-spacing: 2px;
@@ -399,6 +396,11 @@ li {
 	cursor: pointer;
 	margin-bottom: 5%;
 	margin-top: 5%;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	opacity: 1;
     -webkit-transition: opacity 0.6s; /* Safari */
     transition: opacity 0.6s;
@@ -435,9 +437,9 @@ li {
 }
 
 @media only screen and (max-width: 800px) {
-/*    body {
-        width: 130%;
-    }*/
+    body {
+        position: absolute;
+    }
 
 	.med-pic {
 		width: 100%;
