--- a/styles/projects.css
+++ b/styles/projects.css
@@ -130,7 +130,6 @@ a {
 @media only screen and (max-width: 800px) {
 
 	#projects {
-		width: 125vw;
 		margin-top: 20%;
 		margin-left: 0%;
 		margin-right: 0%;
@@ -146,8 +145,8 @@ a {
 	}
 
 	.archive-pic {
-		height: 115vw;
-		width: 115vw;
+		height: 90vw;
+		width: 90vw;
 		margin-left: 5vw;
 		margin-right: 5vw;
 	}
@@ -159,7 +158,7 @@ a {
 	.mobile-caption {
 		display: block;
 		font-size: 25px;
-		width: 110vw;
+		width: 90vw;
 	}
 
 	.caption {
@@ -173,16 +172,12 @@ a {
 	.proj-details {
 		margin-bottom: 2%;
 		margin-top: 2%;
-		font-size: 20px;
+		font-size: 18px;
+		color: darkgray;
 	}
 
 	#button-wrapper {
 		margin-bottom: 15%;
-		width: 125vw;
-	}
-
-	#footer {
-		width: 125vw;
 	}
 
 }
