updated l&d styles to be consistent w rsvpd

--- a/styles/global2.css
+++ b/styles/global2.css
@@ -122,9 +122,9 @@ li {
 	width: 46%;
 	margin-left: 27%;
 	margin-right: 27%;
-	margin-top: 3px;
-	margin-bottom: 3px;
-	background-color: #eee;
+	margin-top: 3%;
+	margin-bottom: 3%;
+	background-color: #d5d5d5;
 	position: block;
 }
 
@@ -144,6 +144,7 @@ li {
 .page-title {
     font-family: 'Tokyo-Outline';
     font-size: 80px;
+    line-height: 80px;
     margin-bottom: 1%;
     text-align: center;
 }
@@ -393,6 +394,7 @@ li {
 	font-weight: 600;
 	letter-spacing: 2px;
 	font-size: 14px;
+	text-align: center;
 	cursor: pointer;
 	margin-bottom: 5%;
 	margin-top: 5%;
@@ -482,12 +484,13 @@ li {
 
 	.title-wrapper {
 		padding-top: 30%;
-		padding-bottom: 15%;
+		padding-bottom: 10%;
 	}
 
 	.page-title {
 		width: 100%;
-		font-size: 50px;
+		font-size: 40px;
+		line-height: 40px;
 	}
 
 	.section-title {
@@ -506,7 +509,7 @@ li {
 	}
 
 	.next-project {
-		width: 40%;
+		width: 47%;
 		font-size: 12px;
 	}
 
@@ -556,6 +559,8 @@ li {
 		width: 80%;
 		margin-left: 10%;
 		margin-right: 10%;
+		margin-bottom: 5%;
+		margin-top: 5%;
 	}
 
 }
