--- a/styles/nav.css
+++ b/styles/nav.css
@@ -16,14 +16,18 @@
 
 .nav-colored a {
 	color: black;
+	text-transform: capitalize;
 }
 
 .nav-logo {
-	margin: 15px;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	margin-left: 20px;
+	margin-top: -3px;
+	font-family: "Tokyo-Outline";
 	float: left;
-	font-weight: 400;
-	letter-spacing: 1px;
-	font-size: 14px;
+	font-size: 24px;
 	cursor: pointer;
     -webkit-transition: color 0.6s; /* Safari */
     transition: color 0.6s;
@@ -31,10 +35,18 @@
     z-index: 1;
 }
 
+#nav-items {
+	float: right;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
 .nav-item {
-	margin: 15px;
 	display: inline-block;
-	font-weight: 400;
+	text-transform: capitalize;
+	margin-left: 20px;
+	margin-right: 20px;
 	letter-spacing: 1px;
 	font-size: 14px;
 	cursor: pointer;
@@ -44,14 +56,20 @@
     z-index: 2;
 }
 
+#home-nav a:before {
+  content: '​';
+}
+
 .nav-item:hover {
-	color: #0099ff;
+	color: #e98989;
     -webkit-transition: color 0.4s; /* Safari */
     transition: color 0.4s;
 }
 
 .nav-item-home {
 	margin: 20px;
+	margin-top: 10px;
+	text-transform: capitalize;
 	display: inline-block;
 	letter-spacing: 1px;
 	font-size: 15px;
@@ -64,7 +82,7 @@
 }
 
 .nav-item-home:hover {
-	color: #005f9e !important;
+	color: white !important;
     -webkit-transition: color 0.4s !important; /* Safari */
     transition: color 0.4s !important;
 }
