--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,14 +6,15 @@
 	margin-top: 5%;
 	margin-bottom: 5%;
 	display: grid;
-	grid-template-columns: repeat(2, 2fr);
+	grid-template-columns: repeat(3, 1fr);
 }
 
 #subtitle {
 	font-family:'Tokyo-Outline'; 
 	text-align: center; 
-	font-size: 64px; 
-	margin-top: 10%
+	font-size: 50px; 
+	margin-top: 5%;
+	display: none;
 }
 
 .mobile-caption {
@@ -45,7 +46,7 @@
 	left: 0;
 	right: 0;
 	height: 100%;
-	width: 34vw;
+	width: 23vw;
 	opacity: 0;
 	transition: .5s ease;
 	background-color: black;
@@ -66,8 +67,8 @@
 .archive-pic {
 	cursor: pointer;
 	display: block;
-	width: 34vw;
-	height: auto;
+	width: 23vw;
+	height: 23vw;
 }
 
 #projects a {
@@ -78,6 +79,7 @@
 .project-title {
 	font-family: "Tokyo-Outline";
 	font-size: 36px;	
+	line-height: 35px;
 	margin-bottom: 10px;
 }
 
@@ -141,6 +143,7 @@ a {
 	}
 
 	.section {
+		width: 100vw;
 		margin-bottom: 13%;
 	}
 
@@ -157,8 +160,10 @@ a {
 
 	.mobile-caption {
 		display: block;
-		font-size: 20px;
+		font-size: 18px;
 		width: 90vw;
+		padding-left: 5px;
+		padding-right: -5px;
 	}
 
 	.caption {
