--- a/styles/about.css
+++ b/styles/about.css
@@ -4,73 +4,33 @@ body {
     font-weight: 200;   
 }
 
-#about {
-	margin: 0;
-	display: inline-block;
-}
-
-#about-title {
-	font-family: "Tokyo-Outline";
-    padding-top: 10%;
-	position: relative;
-    letter-spacing: 25px;
-	font-size: 60px;
-    line-height: 90px;
-    text-align: center;
-}
-
 #about-pic {
-	float: left;
-	width: 30%;
-	margin-top: 5%;
-	margin-left: 7%;
+	left: 0;
+	width: 35%;
 }
 
 #about-description {
-	float: left;
-	font-weight: 350;
-	font-size: 16px;
-	width: 50%;
-	margin-top: 5%;
-	margin-right: 7%;
-	margin-left: 3%;
-	margin-bottom: 5%;
-}
-
-#about-description a {
-	color: #0099ff;
-	text-decoration: none;
+	float: right;
+	width: 60%;
+	margin-left: 5%;
 }
 
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
+	.header {
+		text-align: left;
+	}
+
 	#about-pic {
-		width: 80%;
-		margin-left: 10%;
-		margin-right: 10%;
+		width: 100%;
+		margin-bottom: 20px;
+		margin-top: 20px;
 	}
 
 	#about-description {
-		width: 80%;
-		margin-left: 10%;
-		margin-right: 10%;
-	}
-}
-
-
-@media only screen and (max-width: 750px) {
-	#about-title {
-        line-height: 70px;
-        letter-spacing: 5px;
-        padding-top: 20%;
-        font-size: 60px;
-        text-align: left;
-        margin-left: 10%
+		width: 100%;
 	}
 
-	#about-description {
-		font-size: 18px;
-	}
 }
 
 
