--- a/styles/home.css
+++ b/styles/home.css
@@ -1,59 +1,46 @@
-body {
-	margin: 0 !important;
-    font-family: "Avenir";
-    font-weight: 200;
+:root{
+    --featured-color: #e98989;
 }
 
 #home {
-	z-index: 4; 
+	z-index: 4;
     height: 70vh;
     width: 100vw;
-    background-color: #e98989;
+    background-color: var(--featured-color);
     position: relative; 
 }
 
-#home-text {
+#intro {
     padding-left: 15%;
-    padding-right: 15%;
+    padding-right: 15%; 
     padding-top: 5%;
-	z-index: 1;
-	position: relative;
 }
 
-#home-text a {
+#intro a {
     text-decoration: none;
     color: black;
     font-weight: 600;
 }
 
-#home-text-title {
+#name {
     font-family: "Tokyo-Outline";
-	position: relative;
     color: white;
 	font-size: 30px;
-	z-index: 1;
+}
+
+#location {
+    margin-top: 10px;
+    font-size: 18px;
+    color: black;
 }
 
 #home-text-description {
     width: 100%;
     margin-top: 8%;
     margin-bottom: 8%;
-}
-
-.intro {
     font-size: 32px;
     width: 75%;
     color: white;
-}
-
-#my-location {
-    margin-top: 10px;
-    font-size: 18px;
-    color: black;
-}
-
-.padding-large {
-	padding: 70px;
 }
 
 #arrow-down {
@@ -68,34 +55,46 @@ body {
     margin: auto;
     margin-bottom: 7px;
     z-index: 5;
-
 }
 
-.learn-about {
-    width: 150px;
-    height: 35px;
-    text-align: center;
-    padding-top: 22px;
-    font-weight: 500;
+/* View all button */
+#view-all-btn {
+    border: 1px solid black; 
+    padding-top: 12px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 80px;
     letter-spacing: 2px;
-    font-size: 14px;
-    cursor: pointer;
-    margin-bottom: 3%;
-    margin-top: 4%;
-    display: block;
-    background-color: #0078c8; 
-    text-transform: uppercase;
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
+    color: black
+    -webkit-transition: background-color 0.8s; /* Safari */
+    transition: background-color 0.8s;
+    -webkit-transition: color 0.8s; /* Safari */
+    transition: color 0.8s;
 }
 
-.learn-about:hover {
-    background-color: white;
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
+#view-all-btn:hover {
+    background-color: black;
+    color: white;
+    -webkit-transition: background-color 0.8s; /* Safari */
+    transition: background-color 0.8s;
+    -webkit-transition: color 0.8s; /* Safari */
+    transition: color 0.8s;
+}
+
+#button-wrapper {
+    width: 100%; 
+    text-align:center; 
+    margin-bottom: 5%
 }
 
 @media only screen and (max-width: 900px) {
+
+    #arrow-down {
+        display: block;
+        width: 50px;
+        height: 50px;
+    }
 
     #home {
         height: 100vh;
@@ -103,7 +102,7 @@ body {
         position: relative;
     }
 
-    #home-text {
+    #intro {
         padding: 0%;
         width: 85%;
         /* center that shit */
@@ -113,45 +112,24 @@ body {
         transform: translate(-50%, -50%);
     }
 
-    #home-text-title {
+    #home-text-description {
+        width: 100%;
+        font-size: 28px;
+    }
+
+    #name {
         font-size: 70px;
         line-height: 70px;
     }
 
-    #my-location {
+    #location {
         margin-top: 8%;
         margin-bottom: 0%;
         font-size: 24px;
     }
 
-    #home-text-description {
-        margin-top: 6%;
-        width: 100%;
+    #button-wrapper {
+        margin-bottom: 15%;
     }
-
-    #home-text-description p {
-        margin-top: 3%;
-    }
-
-    .intro {
-        font-size: 20px;
-        width: 100%;
-    }
-
-    #arrow-down {
-        display: block;
-        width: 50px;
-        height: 50px;
-    }
-
-    #mobile-optional {
-        display: none;
-    }
-
-    .overlay {
-        display: none;
-    }
-
-}
 
 }
