--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -19,4 +19,22 @@
 		font-size: 14px;
 	}
 
+	.title-wrapper {
+		padding-top: 30%;
+		padding-bottom: 10%;
+	}
+
+	.big-pic {
+		width: 100%;
+	}
+
+	.short-divider {
+		background-color: black;
+		width: 80%;
+		margin-left: 10%;
+		margin-right: 10%;
+		margin-bottom: 5%;
+		margin-top: 5%;
+	}
+
 }
