--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -5,10 +5,14 @@
     }
 
     .margin-medium {
-    	margin-top: 20%;
+    	margin-top: 10%;
     }
 
     /* Text Styles */
+    .header {
+    	font-size: 50px;
+    	line-height: 48px;
+    }
 
 	.subheader {
 		line-height: 36px;
@@ -19,12 +23,24 @@
 		font-size: 14px;
 	}
 
-	.title-wrapper {
-		padding-top: 30%;
-		padding-bottom: 10%;
+	.subheader-3 {
+		font-size: 30px;
+		margin-bottom: 10px;
 	}
 
-	.big-pic {
+	.body {
+		font-size: 18px;
+	}
+
+	.double-pic-text {
+		width: 100%;
+	}
+
+	.left {
+		width: 100%;
+	}
+
+	.right {
 		width: 100%;
 	}
 
@@ -35,6 +51,48 @@
 		margin-right: 10%;
 		margin-bottom: 5%;
 		margin-top: 5%;
+	}
+
+	.title-wrapper {
+		padding-top: 30%;
+		padding-bottom: 10%;
+	}
+
+	.context-summary {
+		width: 100%;
+		margin-bottom: 20px;
+		font-size: 18px;
+	}
+
+	.context-specifics {
+		width: 100%;
+		font-size: 18px;
+	}
+
+
+	.big-pic, .pic-right {
+		width: 100%; 
+	}
+
+	.double-pics {
+		width: 44%;
+	}
+
+	.triple-pics {
+		width: 30%;
+	}
+
+	.short-divider {
+		background-color: black;
+		width: 80%;
+		margin-left: 10%;
+		margin-right: 10%;
+		margin-bottom: 5%;
+		margin-top: 5%;
+	}
+
+	.next-project {
+		width: 45%;
 	}
 
 }
