--- a/styles/global2.css
+++ b/styles/global2.css
@@ -125,31 +125,8 @@ li {
 }
 
 /* Text Styles */
-.header {
-	font-family: "Tokyo-Outline";
-    margin-bottom: 5%;
-	font-size: 60px;
-    line-height: 60px;
-    text-align: center;
-}
 
-/* Top section */
-.title-wrapper {
-	padding-top: 5%;
-	width: 60%;
-	margin-left: 20%;
-	margin-right: 20%;
-}
-
-.page-title {
-    font-family: 'Tokyo-Outline';
-    font-size: 60px;
-    line-height: 60px;
-    margin-bottom: 1%;
-    text-align: center;
-}
-
-.project-info {
+.subheader-2 {
 	letter-spacing: 2px;
 	font-weight: 600;
 	font-size: 14px;
@@ -158,7 +135,7 @@ li {
 	margin-bottom: 4%;
 }
 
-.project-info p {
+.subheader-2 p {
 	display: inline-block;
 	margin-left: 2px;
 	margin-right: 2px;
@@ -168,7 +145,7 @@ li {
 	text-align: left;
 }
 
-.context-title {
+/*.subheader-2 {
 	width: 100%;
 	float: left;
 	letter-spacing: 2px;
@@ -177,7 +154,7 @@ li {
 	font-size: 14px;
 	text-transform: uppercase;
 	color: gray;
-}
+}*/
 
 .context-summary {
 	float: left;
@@ -192,14 +169,14 @@ li {
 	margin-bottom: 5px;
 }
 
-.context-subtitle {
+/*.subheader-2 {
 	letter-spacing: 2px;
 	margin-bottom: 5px;
 	font-weight: 600;
 	font-size: 14px;
 	text-transform: uppercase;
 	color: gray;
-}
+}*/
 
 .context-description {
 	margin-bottom: 15px;
@@ -304,7 +281,7 @@ li {
 }
 
 /* Captions */
-.subtitle-left {
+.subheader-3 left {
 	font-size: 54px;
 	font-family: "Tokyo-Outline";
 	width: 30%;
@@ -315,7 +292,7 @@ li {
 	/*position: sticky;*/
 }
 
-.subtitle-right {
+.subheader-4 right {
 	font-size: 22px;
 }
 
@@ -324,7 +301,7 @@ li {
 	font-size: 32px;
 }
 
-.text-right {
+.body right {
 	width: 60%;
 	display: inline-block;
 	margin-top: 20px;
@@ -421,109 +398,7 @@ li {
 
 /* animation stuff */
 
-.preload * {
-  -webkit-transition: none !important;
-  -moz-transition: none !important;
-  -ms-transition: none !important;
-  -o-transition: none !important;
-}
 
-.animate-reveal {
-  opacity: 0;
-  -webkit-animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
-     -moz-animation: reveal 1s ease-in 1 normal forwards;
-       -o-animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
-          animation: reveal 1s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
-}
-
-.animate-first {
-  -webkit-animation-delay: 0;
-     -moz-animation-delay: 0;
-       -o-animation-delay: 0;
-          animation-delay: 0;
-}
-
-.animate-second {
-  -webkit-animation-delay: 500ms;
-     -moz-animation-delay: 500ms;
-       -o-animation-delay: 500ms;
-          animation-delay: 500ms;
-}
-
-.animate-third {
-  -webkit-animation-delay: 1s;
-     -moz-animation-delay: 1s;
-       -o-animation-delay: 1s;
-          animation-delay: 1s;
-}
-
-@-webkit-keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@-moz-keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@-o-keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@keyframes reveal {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-       -moz-transform: translateY(100%);
-         -o-transform: translateY(100%);
-            transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-       -moz-transform: translateY(0);
-         -o-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
 
 @media only screen and (max-width: 1140px) {
 
@@ -593,7 +468,7 @@ li {
 		padding-bottom: 10%;
 	}
 
-	.page-title {
+	.header {
 		width: 100%;
 		font-size: 40px;
 		line-height: 40px;
@@ -604,7 +479,7 @@ li {
 		letter-spacing: 20px;	
 	}
 
-	.project-info {
+	.subheader-2 {
 		font-size: 12px;
 	}
 
@@ -614,25 +489,15 @@ li {
 		font-size: 16px;
 	}
 
-	.next-project {
-		width: 47%;
-		font-size: 12px;
-	}
-
-	.margin-medium {
-/*		width: 0%;
-		margin-left: 5%;
-		margin-right: 5%;*/
-	}
 
 	.context-specifics {
 		width: 100%;
 		font-size: 16px;
 	}
 
-	.context-subtitle, .context-title {
+/*	.subheader-2, .subheader-2 {
 		font-size: 12px;
-	}
+	}*/
 
 	.product-pic-smaller {
 		width: 100%;
@@ -651,12 +516,12 @@ li {
 	}
 
 	/* Newer styles */
-	.subtitle-left {
+	.subheader-3 left {
 		width: 100%;
 		font-size: 42px;
 	}
 
-	.text-right {
+	.body right {
 		width: 100%;
 	}
 
