--- a/styles/home.css
+++ b/styles/home.css
@@ -2,6 +2,10 @@
     --featured-color: #e98989;
 }
 
+body a {
+    color: black;
+}
+
 #home {
 	z-index: 4;
     height: 70vh;
@@ -22,6 +26,10 @@
     font-weight: 600;
 }
 
+.subheader {
+    margin-bottom: 10px;
+}
+
 #name {
     font-family: "Tokyo-Outline";
     color: white;
@@ -35,12 +43,11 @@
 }
 
 #home-text-description {
-    width: 100%;
-    margin-top: 8%;
-    margin-bottom: 8%;
     font-size: 32px;
     width: 75%;
     color: white;
+    margin-top: 15vh;
+    margin-bottom: 15vh;
 }
 
 #arrow-down {
@@ -55,6 +62,10 @@
     margin: auto;
     margin-bottom: 7px;
     z-index: 5;
+}
+
+.margin-medium {
+    margin-top: 8%;
 }
 
 /* View all button */
@@ -115,6 +126,7 @@
     #home-text-description {
         width: 100%;
         font-size: 28px;
+        margin-top: 5vh;
     }
 
     #name {
