--- a/styles/newstagram.css
+++ b/styles/newstagram.css
@@ -12,11 +12,11 @@ a {
 
  @media only screen and (max-width: 700px) {
 
-	.page-title {
+	.header {
 		font-size: 30px;
 	}
 
-	.project-info {
+	.subheader-2 {
 		font-size: 16px;
 	}
 
