--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -12,6 +12,9 @@
     .header {
     	font-size: 50px;
     	line-height: 48px;
+    	width: 100%;
+    	margin-left: 0%;
+    	margin-right: 0%;
     }
 
 	.subheader {
