--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,36 @@
 	src: url("fonts/Avenir-Light.otf");
 }
 
+@font-face {
+	font-family: "Bodoni";
+	src: url("fonts/BodoniFLF-Roman.ttf");
+}
+
+@font-face {
+	font-family: "Bodoni Bold";
+	src: url("fonts/BodoniFLF-Bold.ttf");
+}
+
+@font-face {
+	font-family: "Bodoni Italic";
+	src: url("fonts/BodoniFLF-Italic.ttf");
+}
+
+@font-face {
+	font-family: "Bodoni Bold Italic";
+	src: url("fonts/BodoniFLF-BoldItalic.ttf");
+}
+
+@font-face {
+	font-family: "Playfair";
+	src: url("fonts/PlayfairDisplay-Regular.ttf");
+}
+
+@font-face {
+	font-family: "Abril";
+	src: url("fonts/Abril.ttf");
+}
+
 /* Table styles */
 table, th, td {
     border: 1px solid black;
@@ -30,6 +60,7 @@ table, th, td {
 /* Body */
 body {
 	font-family: "Avenir";
+	color: #414141;
 	font-size: 16px;
 	margin: 0 !important;
 }
@@ -78,10 +109,12 @@ li {
 /* Text Styles */
 .header {
 	font-family: "Tokyo-Outline";
-    margin-bottom: 2%;
 	font-size: 60px;
     line-height: 60px;
     text-align: center;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 .subheader {
@@ -94,7 +127,6 @@ li {
 
 .subheader-2 {
 	letter-spacing: 3px;
-	margin-top: 5px;
 	margin-bottom: 2vh; 
 	font-size: 12px;
 	text-transform: uppercase;
@@ -102,14 +134,11 @@ li {
 }
 
 .subheader-3 {
-	font-size: 42px;
 	letter-spacing: 3px;
+	margin-bottom: 2vh; 
+	font-size: 24px;
 	text-transform: uppercase;
-	color: #aaaaaa;
-	font-family: "Avenir Light";
-	top: 70px;
-	vertical-align: top;
-	/*position: sticky;*/
+	color: black;
 }
 
 .subheader-4 {
@@ -122,13 +151,15 @@ li {
 }
 
 .left {
-	width: 30%;
-	margin-right: 9%;
+	float: left;
+	width: 20%;
+	margin-right: 10%;
 	display: inline-block;
 }
 
 .right {
-	width: 60%;
+	width: 70%;
+	float: right;
 	display: inline-block;
 	top: 0;	
 }
@@ -153,7 +184,7 @@ li {
 /* Project Pages */
 
 .title-wrapper {
-	padding-top: 5%;
+	padding-top: 8%;
 	width: 90%;
 	margin-left: 5%;
 	margin-right: 5%;
@@ -195,11 +226,12 @@ li {
 	width: 100%;
 	margin-top: 5%;
 	margin-bottom: 5%;
-	background-color: #e0e0e0;
+	background-color: white;
 	position: block;
 }
 
 .panel {
+	width: 100%;
 	margin-bottom: 2%;
 	position: relative;
 	opacity: 0;
