--- a/styles/home.css
+++ b/styles/home.css
@@ -27,7 +27,11 @@ body a {
 }
 
 .subheader {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.subheader-2 {
+    margin-top: 10px;
 }
 
 #name {
@@ -96,7 +100,7 @@ body a {
 #button-wrapper {
     width: 100%; 
     text-align:center; 
-    margin-bottom: 5%
+    margin-bottom: 10%
 }
 
 @media only screen and (max-width: 900px) {
