--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,6 +1,6 @@
 #projects {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 2fr);
     margin-bottom: 10%;
 }
 
@@ -30,9 +30,10 @@
 .project-pic {
     cursor: pointer;
     display: block;
-    width: 26vw;
-    height: 26vw;
+    width: 40vw;
+    height: 40vw;
     margin-right: 1vw;
+    margin-bottom: 1vw;
 }
 
 .section {
@@ -50,7 +51,8 @@
     left: 0;
     right: 0;
     height: 100%;
-    width: 26vw;
+    width: 40vw;
+    height: 40vw;
     opacity: 0;
     transition: .5s ease;
     background-color: black;
