--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,12 @@
 }
 
 @font-face {
+	font-family: "Tokyo-Regular";
+	src: url("fonts/TokyoRegular-Regular.ttf");
+}
+
+
+@font-face {
 	font-family: "Avenir";
 	src: url("fonts/Avenir.otf");
 }
@@ -88,15 +94,12 @@ li {
 	width: 20px;
 	padding: 10px;
 	border-radius: 50%;
+    font-size: 20px;
+    color: black;
+    text-align: center;
 	box-shadow: 1px 1px 15px #e5e5e5;
 	cursor: pointer;
 	z-index: 1;
-	/* turn the arrown upside down */
-	-webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    transform: rotate(180deg);
 }
 
 /* Margins */
@@ -109,7 +112,7 @@ li {
 /* Text Styles */
 .header {
 	font-family: "Tokyo-Outline";
-	font-size: 60px;
+	font-size: 5em;
     line-height: 60px;
     text-align: center;
     width: 70%;
@@ -127,17 +130,18 @@ li {
 
 .subheader-2 {
 	letter-spacing: 3px;
-	margin-bottom: 2vh; 
-	font-size: 12px;
+	margin-bottom: 1vh; 
+	font-size: .9em;
 	text-transform: uppercase;
-	color: #696969;
+	color: black;
 }
 
 .subheader-3 {
 	letter-spacing: 3px;
 	margin-bottom: 2vh; 
-	font-size: 24px;
+	font-size: 28px;
 	text-transform: uppercase;
+    font-family: "Tokyo-Regular";
 	color: black;
 }
 
@@ -184,10 +188,15 @@ li {
 /* Project Pages */
 
 .title-wrapper {
-	padding-top: 8%;
-	width: 90%;
-	margin-left: 5%;
-	margin-right: 5%;
+	width: 100%;
+    height: 80vh;
+    position: absolute;
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.9);
+	margin-top: 2%;
+	left: 0;
+	top: 0;
+    padding-top: 40vh;
 }
 
 .context-summary {
@@ -202,7 +211,7 @@ li {
 }
 
 .context-description {
-	margin-bottom: 15px;
+	margin-bottom: 35px;
 }
 
 .last {
@@ -212,39 +221,62 @@ li {
 
 .short-divider {
 	height: 1px;
-	width: 46%;
-	margin-left: 27%;
-	margin-right: 27%;
+	width: 50%;
+	margin-left: 25%;
+	margin-right: 25%;
 	margin-top: 3%;
 	margin-bottom: 3%;
-	background-color: #d5d5d5;
+	background-color: black;
 	position: block;
 }
 
 .divider {
-	height: 1px;
+	height: 2px;
 	width: 100%;
-	margin-top: 5%;
-	margin-bottom: 5%;
+	margin-top: 1%;
+	margin-bottom: 1%;
 	background-color: white;
 	position: block;
 }
 
-.panel {
-	width: 100%;
-	margin-bottom: 2%;
+.content {
+	width: 60%;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 	position: relative;
+    display: inline-flex;
 	opacity: 0;
+    background-color: white;
+}
+
+.panel {
+	width: 60%;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+	position: relative;
+    display: inline-flex;
+	opacity: 0;
+    background-color: white;
 }
 
 /* Picture styles */
 .big-pic {
 	width: 100%;
-	box-shadow: 1px 1px 10px #BABABA;
+    height: 110vh;
 	display: inline;
 	margin-top: 2%;
 	left: 0;
 	top: 0;
+    position: sticky;
+}
+
+#pic-space {
+	width: 100%;
+    height: 110vh;
 }
 
 .pic-right {
@@ -276,25 +308,23 @@ li {
 
 .dark {
 	background-color: #272727; 
-	width: 128%;
-	margin-left: -15%;
-	margin-right: -13%;
-	margin-bottom: 5%;
+    width: 100%;
+    padding: 0%;
 }
 
 /* Next button */
 .next-project {
-
 	width: 30%;
 	height: 50px;
 	color: white;
 	font-weight: 600;
 	letter-spacing: 2px;
 	font-size: 14px;
+    line-height: 12px;
 	text-align: center;
 	cursor: pointer;
-	margin-bottom: 5%;
-	margin-top: 5%;
+	margin: 5%;
+    vertical-align: middle;
 
 	display: flex;
 	justify-content: center;
