--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,5 @@
 :root{
-    --featured-color: #e98989;
+    --featured-color: white; /*#e98989;*/
 }
 
 body a {
@@ -8,15 +8,15 @@ body a {
 
 #home {
 	z-index: 4;
-    height: 70vh;
+    height: 60vh;
     width: 100vw;
     background-color: var(--featured-color);
     position: relative; 
 }
 
 #intro {
-    padding-left: 15%;
-    padding-right: 15%; 
+    padding-left: 10%;
+    padding-right: 10%; 
     padding-top: 5%;
 }
 
@@ -24,6 +24,11 @@ body a {
     text-decoration: none;
     color: black;
     font-weight: 600;
+}
+
+#intro-2 {
+    font-size: 24px;
+    font-family: "Avenir";
 }
 
 .subheader {
@@ -36,7 +41,7 @@ body a {
 
 #name {
     font-family: "Tokyo-Outline";
-    color: white;
+    /* color: white; */
 	font-size: 30px;
 }
 
@@ -47,25 +52,29 @@ body a {
 }
 
 #home-text-description {
-    font-size: 32px;
-    width: 75%;
-    color: white;
-    margin-top: 15vh;
-    margin-bottom: 15vh;
+    font-size: 56px;
+    font-family: "Tokyo-Outline";
+    width: 70%;
+    color: black;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
 }
 
 #arrow-down {
     display: none;
     height: 40px;
     width: 40px;
+    font-size: 40px;
+    text-align: center;
     cursor: pointer;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-    margin-bottom: 7px;
+    margin-bottom: 30px;
     z-index: 5;
+    color: #414141;
 }
 
 .margin-medium {
@@ -107,8 +116,6 @@ body a {
 
     #arrow-down {
         display: block;
-        width: 50px;
-        height: 50px;
     }
 
     #home {
@@ -129,8 +136,7 @@ body a {
 
     #home-text-description {
         width: 100%;
-        font-size: 28px;
-        margin-top: 5vh;
+        font-size: 56px;
     }
 
     #name {
@@ -139,9 +145,7 @@ body a {
     }
 
     #location {
-        margin-top: 8%;
-        margin-bottom: 0%;
-        font-size: 24px;
+        display: none;
     }
 
     #button-wrapper {
