--- a/styles/about.css
+++ b/styles/about.css
@@ -21,9 +21,6 @@ a {
 
 
 @media only screen and (max-width: 800px) {
-	.header {
-		text-align: left;
-	}
 
 	#about-pic {
 		width: 100%;
@@ -34,6 +31,11 @@ a {
 	#about-description {
 		width: 100%;
 	}
+    
+    .title-wrapper {
+        padding-top: 5%;
+        padding-bottom: 5%;
+    }
 
 }
 
