--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 770px) {
 
     body {
         position: relative;
@@ -56,11 +56,6 @@
 		margin-top: 5%;
 	}
 
-	.title-wrapper {
-		padding-top: 30%;
-		padding-bottom: 10%;
-	}
-
 	.context-summary {
 		width: 100%;
 		margin-bottom: 20px;
@@ -71,11 +66,22 @@
 		width: 100%;
 		font-size: 18px;
 	}
-
-
-	.big-pic, .pic-right {
-		width: 100%; 
-	}
+    
+    .title-wrapper {
+        top: 60px;
+        position: relative;
+        background-color: white;
+    }
+    
+    .big-pic {
+        top: 60px;
+        position: relative;
+        margin-bottom: 60px;
+    }
+    
+    #pic-space {
+        display: none;
+    }
 
 	.double-pics {
 		width: 44%;
@@ -95,7 +101,22 @@
 	}
 
 	.next-project {
-		width: 45%;
+		width: 100%;
+        margin: 0%;
+        margin-bottom: 3%;
 	}
+    
+    .panel {
+        width: 90%;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 15%;
+        padding-bottom: 15%;
+        position: initial;
+    }
+    
+    #footer {
+        margin-top: 13%;
+    }
 
 }
