--- a/styles/global.css
+++ b/styles/global.css
@@ -27,33 +27,13 @@
 }
 
 @font-face {
-	font-family: "Bodoni";
-	src: url("fonts/BodoniFLF-Roman.ttf");
+	font-family: "Avenir Medium";
+	src: url("fonts/Avenir-Medium.otf");
 }
 
 @font-face {
-	font-family: "Bodoni Bold";
-	src: url("fonts/BodoniFLF-Bold.ttf");
-}
-
-@font-face {
-	font-family: "Bodoni Italic";
-	src: url("fonts/BodoniFLF-Italic.ttf");
-}
-
-@font-face {
-	font-family: "Bodoni Bold Italic";
-	src: url("fonts/BodoniFLF-BoldItalic.ttf");
-}
-
-@font-face {
-	font-family: "Playfair";
-	src: url("fonts/PlayfairDisplay-Regular.ttf");
-}
-
-@font-face {
-	font-family: "Abril";
-	src: url("fonts/Abril.ttf");
+	font-family: "Avenir Bold";
+	src: url("fonts/Avenir-Bold.ttf");
 }
 
 /* Table styles */
@@ -99,7 +79,7 @@ li {
     text-align: center;
 	box-shadow: 1px 1px 15px #e5e5e5;
 	cursor: pointer;
-	z-index: 1;
+	z-index: 6;
 }
 
 /* Margins */
@@ -112,8 +92,7 @@ li {
 /* Text Styles */
 .header {
 	font-family: "Tokyo-Outline";
-	font-size: 5em;
-    line-height: 60px;
+	font-size: 5.2em;
     text-align: center;
     width: 70%;
     margin-left: 15%;
@@ -131,26 +110,27 @@ li {
 .subheader-2 {
 	letter-spacing: 3px;
 	margin-bottom: 1vh; 
-	font-size: .9em;
+	font-size: .7em;
 	text-transform: uppercase;
 	color: black;
+    font-family: "Avenir Bold";
 }
 
 .subheader-3 {
 	letter-spacing: 3px;
 	margin-bottom: 2vh; 
-	font-size: 28px;
+	font-size: 1.4em;
 	text-transform: uppercase;
-    font-family: "Tokyo-Regular";
+    font-family: "Avenir Bold";
 	color: black;
 }
 
 .subheader-4 {
-	font-size: 20px;
+	font-size: 1.2em;
 }
 
 .double-pic-text {
-	width: 40%;
+	width: 50%;
 	display: inline-block;
 }
 
@@ -189,14 +169,17 @@ li {
 
 .title-wrapper {
 	width: 100%;
-    height: 80vh;
     position: absolute;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.9);
-	margin-top: 2%;
 	left: 0;
-	top: 0;
-    padding-top: 40vh;
+    top: 48px;
+    display: grid;
+}
+
+.title {
+    align-self: center;
+    justify-self: center;
 }
 
 .context-summary {
@@ -221,9 +204,7 @@ li {
 
 .short-divider {
 	height: 1px;
-	width: 50%;
-	margin-left: 25%;
-	margin-right: 25%;
+	width: 100%;
 	margin-top: 3%;
 	margin-bottom: 3%;
 	background-color: black;
@@ -258,25 +239,32 @@ li {
     padding-top: 5%;
     padding-bottom: 5%;
 	position: relative;
-    display: inline-flex;
-	opacity: 0;
+    display: inline-table;
     background-color: white;
 }
+
+.gray {
+    background-color: #eeeeee;
+}
+
+.gray-gradient {
+    background-image: linear-gradient(#eeeeee, white);
+}
+
+
 
 /* Picture styles */
 .big-pic {
 	width: 100%;
-    height: 110vh;
+    height: 100%;
 	display: inline;
-	margin-top: 2%;
 	left: 0;
-	top: 0;
+    top: 48px;
     position: sticky;
 }
 
 #pic-space {
 	width: 100%;
-    height: 110vh;
 }
 
 .pic-right {
@@ -295,7 +283,6 @@ li {
 	width: 20%; 
 	margin-right: 5%;
 	display: inline-block;
-	top: 70px;
 	vertical-align: top;
 }
 
