--- a/styles/global.css
+++ b/styles/global.css
@@ -99,6 +99,16 @@ li {
     margin-right: 15%;
 }
 
+.proj-header {
+    font-family: "Tokyo-Outline";
+    line-height: .9em;
+    font-size: 4.5em;
+    text-align: left; 
+    margin-left: 0%;
+    margin-bottom: 5%;
+    width: 80%;
+}
+
 .subheader {
 	font-family: "Tokyo-Outline";
 	letter-spacing: 1px;
@@ -169,6 +179,7 @@ li {
 
 .title-wrapper {
 	width: 100%;
+    height: 100vh;
     position: absolute;
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.9);
@@ -203,11 +214,11 @@ li {
 }
 
 .short-divider {
-	height: 1px;
+	height: 5px;
 	width: 100%;
-	margin-top: 3%;
-	margin-bottom: 3%;
-	background-color: black;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	background-color: #e98989;
 	position: block;
 }
 
@@ -250,8 +261,6 @@ li {
 .gray-gradient {
     background-image: linear-gradient(#eeeeee, white);
 }
-
-
 
 /* Picture styles */
 .big-pic {
