--- a/styles/global.css
+++ b/styles/global.css
@@ -227,7 +227,7 @@ li {
 	width: 100%;
 	margin-top: 1%;
 	margin-bottom: 1%;
-	background-color: white;
+	background-color: none;
 	position: block;
 }
 
