--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -23,7 +23,7 @@
 	}
 
 	.subheader-2 {
-		font-size: 14px;
+		font-size: .8em;
 	}
 
 	.subheader-3 {
@@ -59,15 +59,19 @@
 	}
     
     .title-wrapper {
-        top: 60px;
-        height: auto;
-        padding-top: 10%;
-        padding-bottom: 10%;
+        padding-top: 72px;
         position: relative;
         background-color: white;
     }
+
+	.title {
+		width: 85%;
+		margin-left: 5%;
+	}
     
     .big-pic {
+    	width: 100%;
+    	padding-left: 0;
         top: 60px;
         position: relative;
         margin-bottom: 60px;
@@ -85,16 +89,10 @@
 		width: 30%;
 	}
 
-/*
-	.short-divider {
-		background-color: black;
-		width: 80%;
-		margin-left: 10%;
-		margin-right: 10%;
-		margin-bottom: 5%;
-		margin-top: 5%;
+	.divider {
+		margin-top: 3%;
+		margin-bottom: 3%;
 	}
-*/
 
 	.next-project {
 		width: 100%;
@@ -109,6 +107,7 @@
         padding-top: 15%;
         padding-bottom: 15%;
         position: initial;
+        display: inline-block;
     }
     
     #footer {
