--- a/styles/global.css
+++ b/styles/global.css
@@ -62,6 +62,16 @@ li {
 	margin-left: 8%;
 }
 
+::selection {
+  background: rgb(233, 137, 137); /* WebKit/Blink Browsers */
+  color: white;
+}
+
+::-moz-selection {
+  background: rgb(233, 137, 137);; /* Gecko Browsers */
+  color: white;
+}
+
 /* Arrow scroll */
 #arrow-up {
 	display: none;
