fixed title height for mobile

--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -61,6 +61,7 @@
     
     .title-wrapper {
         padding-top: 72px;
+        height: 15vh;
         position: relative;
         background-color: white;
     }
