--- a/styles/home.css
+++ b/styles/home.css
@@ -10,14 +10,17 @@ body a {
 	z-index: 4;
     height: 70vh;
     width: 100vw;
+    /*background: linear-gradient(90deg, rgba(223,105,105,1) 0%, rgba(237,175,175,1) 100%, rgba(255,255,255,1) 100%);*/
     background-color: #e98989;
     position: relative;
+    box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .home-pic {
     height: 70vh;
     position: absolute;
     right: 0;
+    bottom: 0;
 }
 
 #intro {
@@ -62,7 +65,6 @@ body a {
 }
 
 #arrow-down {
-    display: none;
     height: 40px;
     width: 40px;
     font-size: 40px;
@@ -73,9 +75,9 @@ body a {
     left: 0;
     right: 0;
     margin: auto;
-    margin-bottom: 130px;
+    margin-bottom: 40px;
     z-index: 5;
-    color: #414141;
+    color: black;
 }
 
 .margin-medium {
