--- a/styles/projects.css
+++ b/styles/projects.css
@@ -9,7 +9,7 @@
     position: relative;
     width: 80vw;
     height: 30vw;
-    box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     margin-bottom: 7vh;
     transition: all 300ms ease;
@@ -53,7 +53,7 @@
 
 .tag {
     /*color: white;*/
-    border: 1px solid darkgray;
+    border: 1px solid lightgray;
     border-radius: 10px;
     height: 26px;
     padding: 10px;
